crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__t_strings.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtExpr
      - ExprTString
        - TString
          - InterpolatedStringLiteralElement
        - TString
          - InterpolatedStringLiteralElement
          - InterpolatedElement
            - ExprName
            - InterpolatedStringLiteralElement
            - InterpolatedElement
              - ExprName
            - InterpolatedStringLiteralElement
          - InterpolatedStringLiteralElement
