crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__type_aliases.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtTypeAlias
      - ExprName
      - TypeParams
        - TypeParamTypeVar
          - Identifier
          - ExprName
        - TypeParamTypeVar
          - Identifier
        - TypeParamTypeVarTuple
          - Identifier
        - TypeParamParamSpec
          - Identifier
      - ExprSubscript
        - ExprName
        - ExprName
